--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
-    "react-metrics-graphics": "^1.0.2"
+    "react-metrics-graphics": "^1.0.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^8.1.2",
