--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "neutrino build && gh-pages -d build",
     "build": "neutrino build",
     "start": "neutrino start",
-    "lint": "neutrino lint"
+    "lint": "neutrino lint",
+    "test": "neutrino test"
   },
   "dependencies": {
     "metrics-graphics": "^2.13.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@neutrinojs/airbnb": "^8.1.2",
+    "@neutrinojs/mocha": "^8.2.3",
     "@neutrinojs/react": "^8.1.2",
     "gh-pages": "^1.1.0",
     "neutrino": "^8.1.2"
