--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "metrics-graphics": "^2.13.0",
     "prop-types": "^15.6.1",
+    "query-string": "^6.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
@@ -26,6 +27,7 @@
     "@neutrinojs/airbnb": "^8.1.2",
     "@neutrinojs/mocha": "^8.2.3",
     "@neutrinojs/react": "^8.1.2",
+    "fetch-mock": "^6.4.3",
     "gh-pages": "^1.1.0",
     "neutrino": "^8.1.2"
   }
