--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-  "name": "perf-goggles",
+  "name": "@mozilla-frontend-infra/perf-goggles",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:mozilla-frontend-infra/perf-goggles.git",
+  "main": "build/index.js",
+  "keywords": [
+    "mozilla",
+    "treeherder",
+    "perfherder"
+  ],
+  "repository": "mozilla-frontend-infra/perf-goggles",
   "author": "Armen Zambrano G. <armenzg@gmail.com>",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "scripts": {
-    "deploy": "neutrino build && gh-pages -d build",
     "build": "neutrino build",
-    "start": "neutrino start",
     "lint": "neutrino lint",
     "test": "neutrino test",
     "coverage": "nyc -r lcov -r text yarn test",
@@ -19,26 +22,26 @@
       "src/**"
     ]
   },
-  "dependencies": {
-    "lodash": "^4.17.10",
-    "metrics-graphics": "^2.13.0",
-    "prop-types": "^15.6.1",
-    "query-string": "^6.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",
-    "react-metrics-graphics": "^1.0.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
-  },
   "devDependencies": {
-    "@neutrinojs/airbnb": "^8.1.2",
-    "@neutrinojs/mocha": "^8.2.3",
-    "@neutrinojs/react": "^8.1.2",
+    "@neutrinojs/airbnb-base": "^8.3.0",
+    "@neutrinojs/library": "^8.3.0",
+    "@neutrinojs/mocha": "^8.3.0",
     "coveralls": "^3.0.1",
     "fetch-mock": "^6.4.3",
-    "gh-pages": "^1.1.0",
     "neutrino": "^8.3.0",
+    "node-fetch": "^2.1.2",
     "nyc": "^12.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.10",
+    "query-string": "^6.1.0"
+  },
+  "description": "[![Build Status](https://travis-ci.org/mozilla-frontend-infra/perf-goggles.svg?branch=master)](https://travis-ci.org/mozilla-frontend-infra/perf-goggles) [![Coverage Status](https://coveralls.io/repos/github/mozilla-frontend-infra/perf-goggles/badge.svg?branch=coverage)](https://coveralls.io/github/mozilla-frontend-infra/perf-goggles?branch=coverage)",
+  "bugs": {
+    "url": "https://github.com/mozilla-frontend-infra/perf-goggles/issues"
+  },
+  "homepage": "https://github.com/mozilla-frontend-infra/perf-goggles#readme",
+  "directories": {
+    "test": "test"
   }
 }
