--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "neutrino": "^8.3.0",
-    "node-fetch": "^2.1.2",
     "nyc": "^12.0.2"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.10",
     "query-string": "^6.1.0"
   },
