--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "coveralls": "^3.0.1",
     "fetch-mock": "^6.4.3",
     "neutrino": "^8.3.0",
-    "node-fetch": "^2.1.2",
     "nyc": "^12.0.2"
   },
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.10",
     "query-string": "^6.1.0"
   },
