--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "lint": "neutrino lint",
     "test": "neutrino test",
     "coverage": "nyc -r lcov -r text yarn test",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "precommit": "lint-staged"
   },
   "nyc": {
     "include": [
       "src/**"
+    ]
+  },
+  "lint-staged": {
+    "*.js*": [
+      "neutrino lint"
     ]
   },
   "devDependencies": {
@@ -28,6 +34,8 @@
     "@neutrinojs/mocha": "^8.3.0",
     "coveralls": "^3.0.1",
     "fetch-mock": "^6.4.3",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
     "neutrino": "^8.3.0",
     "node-fetch": "^2.1.2",
     "nyc": "^12.0.2"
