Add publishing npm scripts to build before publishing a package
Publishing to verdaccio allows you to test that everything works as expected.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "test": "neutrino test",
     "coverage": "nyc -r lcov -r text yarn test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "publish-to-npm": "yarn build && npm publish --access public --registry https://registry.npmjs.org",
+    "publish-to-verdaccio": "yarn build && npm publish --registry http://localhost:4873"
   },
   "nyc": {
     "include": [
