--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.10",
+    "lodash.isequal": "^4.5.0",
     "query-string": "^6.1.0"
   },
   "description": "[![Build Status](https://travis-ci.org/mozilla-frontend-infra/perf-goggles.svg?branch=master)](https://travis-ci.org/mozilla-frontend-infra/perf-goggles) [![Coverage Status](https://coveralls.io/repos/github/mozilla-frontend-infra/perf-goggles/badge.svg?branch=coverage)](https://coveralls.io/github/mozilla-frontend-infra/perf-goggles?branch=coverage)",
