--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "prepare": "yarn build",
     "publish-to-verdaccio": "yarn build && npm publish --registry http://localhost:4873"
   },
+  "files": [
+    "build"
+  ],
   "nyc": {
     "include": [
       "src/**"
