--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "author": "Armen Zambrano G. <armenzg@gmail.com>",
   "license": "MPL-2.0",
   "scripts": {
-    "build": "neutrino build",
-    "lint": "neutrino lint",
-    "test": "neutrino test",
+    "build": "webpack --mode production",
+    "test": "mocha --require mocha.config.js --recursive",
+    "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src test",
     "coverage": "nyc -r lcov -r text yarn test",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "precommit": "lint-staged",
@@ -30,19 +30,23 @@
   },
   "lint-staged": {
     "*.js*": [
-      "neutrino lint"
+      "lint"
     ]
   },
   "devDependencies": {
-    "@neutrinojs/airbnb-base": "^8.3.0",
-    "@neutrinojs/library": "^8.3.0",
-    "@neutrinojs/mocha": "^8.3.0",
+    "@neutrinojs/airbnb-base": "^9.0.0-rc.0",
+    "@neutrinojs/library": "^9.0.0-rc.0",
+    "@neutrinojs/mocha": "^9.0.0-rc.0",
     "coveralls": "^3.0.1",
+    "eslint": "^5",
     "fetch-mock": "^6.4.3",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
-    "neutrino": "^8.3.0",
-    "nyc": "^12.0.2"
+    "mocha": "^5",
+    "neutrino": "^9.0.0-rc.0",
+    "nyc": "^12.0.2",
+    "webpack": "^4",
+    "webpack-cli": "^3"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
